# NewtonFractals

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cluster.rs  main.rs  newton.rs  viz.rs
