[package]
name = "newton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
ndarray = "0.15.3"
num = "0.4.0"
num-traits = "0.2.14"

[target.x86_64-unknown-linux-gnu]
rustflags = ["--no-rosegment"]

[profile.release]
debug = true
